--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>khadimulmadina</title>
+    <title>KHADIM UL MADINA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="khadimulmadina" name="keywords">
     <meta content="Travel and Tour" name="description">
